# Hydra

./: .gitignore  CMakeLists.txt  LICENSE  README.md
models/: Dragon_wp4.mtl  Dragon_wp5.gltf  cube.gltf
shaders/: new_shader.frag  new_shader.vert  quad.frag  shadow_mapping.vert  simple_shader.frag  simple_shader.vert  skybox.frag  skybox.vert
src/: Material.cpp  app.cpp  app.hpp  main.cpp
src/Components/: Camera.hpp  Color.hpp  Material.hpp  Mesh.hpp  Renderable.hpp  Transform.hpp  Viewer.hpp
src/Core/: Base.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  MouseCodes.hpp  Types.hpp  Window.cpp  Window.hpp  hyd_window.cpp  hyd_window.hpp
src/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
src/Managers/: MaterialManager.cpp  MaterialManager.hpp  MeshManager.cpp  MeshManager.hpp  TextureManager.cpp  TextureManager.hpp  iManager.hpp
src/Renderer/: Animation.hpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Device.cpp  Device.hpp  FrameInfo.hpp  Material.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp  Texture.cpp  Texture.hpp  Utils.hpp  Vertex.hpp  VertexFormat.hpp
src/Ressources/: Image.cpp  Image.hpp
src/Systems/: master_render_system.cpp  master_render_system.hpp  point_light_render_system.cpp  render_system.cpp  render_system.hpp  viewer_controller.cpp  viewer_controller.hpp
src/Systems/sub_render_systems/: imageViewer.cpp  imageViewer.hpp  new_render_system.cpp  new_render_system.hpp  object_render_system.cpp  object_render_system.hpp  point_light_render_system.cpp  point_light_render_system.hpp  shadowMappingSystem.cpp  shadowMappingSystem.hpp  simple_render_system.cpp  simple_render_system.hpp  skybox_render_system.cpp  skybox_render_system.hpp
